...
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/cd_cancel"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:text="Сохранить"
        style="@style/GeneralBorderlessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
...
        android:layout_margin="10dp"
        style="@style/TextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/button_close"
        android:hint="@string/input_text_placeholder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/todo_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="10"
            />

    </com.google.android.material.textfield.TextInputLayout>
...
